public/css/style.css
/* ... */
/* CSS for Contact Details Page*/
.contact-details {
    padding: 50px;

    h1 {
        font-size: 24px;
        text-align: center;
        margin: 0 auto;
        margin-bottom: 10px;
    }

    h2 {
        font-size: 16px;
        margin: 0 auto;
    }

    .contact-details-form {
        width: 33vw;
        min-width: 500px;
        max-width: 600px;
        margin: 0 auto;

        form input[type="text"], input[type="email"] {
            width: 95%;
        }
        
        .contact-line-break {
            margin-top: 5px;
            margin-bottom: 10px;
            background-color: var(--border-color);
            height: 2px;
            width: 99%;
        }
    }

    .contact-detail-button {
        width: 100%;
        margin-top: 15px;
    }

}

/* Media Query for Contact Details Page */
@media (max-width: 768px) {
    .contact-details {
        width: 300px;
        padding: 0;
        margin: 1.8rem;
        align-items: center;
        justify-content: center;

        h1 {
            font-size: 1.8rem;
            margin-left: 30px;
        }

        .contact-details-form {
            margin: 10px;
            padding: 10px;
            width: 300px;
        }

        .contact-details-form {
            min-width: 320px;
            max-width: 100%;
            padding: 10px;
            margin-left: 0px;
        }
    }
}

/* CSS for Change Password page */
.change {
    padding: 15px;

    .reset-sections {
        width: 100%;
        max-width: 400px;
        margin-bottom: 15px;
        align-items: center;
        margin: auto;

        h2 {
            text-align: center;
        }

        .change-pass-label {
            margin-bottom: 15px;
        }

        form input[type="password"] {
            width: 94.5%;
            margin-bottom: 10px;
        }

        button {
            width: 100%;
            min-width: 320px;
        }

        .error-messages ul li {
            color: red;
            padding-left: 0;
            margin: 0;
        }

        .error-messages li {
            margin-bottom: 5px;
        }
    }
}

/* Media Query for Change Password Page */
@media (max-width: 768px) {
    .account-page {
        min-width: 200px;
        margin: 20px;
        margin-bottom: 100px;

        h1 {
            font-size: 1.5em;
        }

    }
}

/* CSS for Previous Orders Page */
/* main styling for previous ordes page */
#previous-orders {
    max-width: 800px; /* keep compact */
    padding: 15px;
    margin: 30px auto; /* centers the content */
    box-shadow: 0 0 10px var(--alt-bs-colour); /*create shadow effect*/

    /* header styling */
    h1 {
        font-size: 24px;
        font-weight: bold;
        color: var(--text-colour);
        text-align: center;
        margin-bottom: 15px;
    }
}

/* orders list */
.orders-list {
    margin-top: 10px;
}

/* styling for each individual order */
.order {
    background-color: var(--card-bg-colour);
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.05); /*smaller shdow effect created */
    transition: background-color 0.3s ease;
    border-radius: 8px;
    padding: 12px;
    margin-bottom: 10px;
}

.order:hover {
    background-color: var(--card-hover-colour);
}

/* order information date, dispatch, total) */
.order-info {
    min-width: 200px;
    font-size: 14px;
    margin-bottom: 5px;
    text-align: left;
}

.order-items {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

/* item styling*/
.item {
    width: 100%;
    display: flex;
    align-items: center; /* keep in a row */
    justify-content: space-between;
    gap: 15px;
    margin-bottom: 5px;
}

/* product details */
.previous-item-details {
    flex-grow: 1;
    text-align: left; /* keeps the name, price and quantity plus all buttons together on the left */
    font-size: 14px;
}

/* product image styling */
.item img {
    width: 120px; /* fixed height and width for imges */
    height: 120px;
    border-radius: 6px;
}

/* product text styling for name price and qunatity */
.item-name {
    font-weight: bold;
    font-size: 15px;
}

.item-price, .item-quantity {
    font-size: 13px;
}

.item-quantity {
    margin-top: 2px;
}

/* buttons container (allow for buttons to be next to the image) */
.order-actions {
    display: flex;
    flex-direction: row; /* buttons kept in a row */
    gap: 5px;
    align-items: center;
}

/* button styling */
.order-actions .button {
    transition: background-color 0.3s ease, transform 0.2s ease;
    padding: 6px 10px;
    font-size: 13px; 
    white-space: nowrap; /* prevent text from wrapping */

}

/* hover effect for wehn on buttons */
.order-actions .button:hover {
    transform: scale(1.05);
}
/* ... */

